infrastructure/controllers/databases/redis-ha/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-ha-network-policy
  namespace: databases
  annotations:
    # temp: gapless controllers->configs move (removed once configs adopts). 2026-07-03.
    kustomize.toolkit.fluxcd.io/prune: disabled
spec:
  podSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - redis-replication
          - redis-sentinel-sentinel
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: paperless-ngx
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: immich
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: blocky
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: uptime-kuma
        - podSelector: {}
      ports:
        - { protocol: TCP, port: 6379 }
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: immich
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: blocky
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: uptime-kuma
        - podSelector: {}
      ports:
        - { protocol: TCP, port: 26379 }
    - from:
        - podSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - redis-replication
                  - redis-sentinel-sentinel
      ports:
        - { protocol: TCP, port: 6379 }
        - { protocol: TCP, port: 26379 }
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - { protocol: TCP, port: 9121 }
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - { protocol: UDP, port: 53 }
        - { protocol: TCP, port: 53 }
    - to:
        - podSelector:
            matchExpressions:
              - key: app
                operator: In
                values:
                  - redis-replication
                  - redis-sentinel-sentinel
      ports:
        - { protocol: TCP, port: 6379 }
        - { protocol: TCP, port: 26379 }
